[package]
name = "wspr"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
url = "2.3.1"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = [
  "json",
] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
